# Project-Nova

./: .gitignore  README.md  config.json  config_example.json  pyproject.toml
project_nova/: app.py  config.py  other_functions.py
project_nova/core_functions/: finetuned_gemini_call.py
project_nova/logs/: log.txt
project_nova/speech_utilities/: capture_speech.py  deliver_speech_tts.py
project_nova/system_utilities/: command_terminal.py  youtube.py
